# hassio-ecoflow-cloud

./: .gitattributes  .gitignore  CLAUDE.md  Makefile  README.md  main.py  pyproject.toml  pyrightconfig.json
.claude/: settings.local.json
.cursor/: cursor-optimization-plan.md
.cursor/rules/: archiecture-understanding.mdc  debug.mdc  directory-structure.mdc  error-documentation.mdc  implement.mdc  lessons-learned.mdc  memory.mdc  plan.mdc  rules.mdc
.devcontainer/: devcontainer.json  post-create.sh  post-start.sh
.roo/: system-prompt-architect  system-prompt-ask  system-prompt-chat  system-prompt-code  system-prompt-debug  system-prompt-mcp  system-prompt-orchestrator  system-prompt-write
.serena/: project.yml
.serena/memories/: container_rebuild_context_2025_10_15.md  delta_pro_3_bms_heartbeat_implementation.md  delta_pro_3_bms_heartbeat_solution_found.md  delta_pro_3_command_id_mapping.md  delta_pro_3_complete_message_mapping.md  delta_pro_3_cycles_investigation_results.md  delta_pro_3_energy_sensors_fixed_camelcase.md  delta_pro_3_entity_status_after_utf8_fix.md  (+1 more)
docs/: gen.py
docs_4ai/: architecture.md  cmd_id_func_mapping.md  dp3_entity_specification.md  product_requirement_docs.md  rules.md  serena_mcp_troubleshooting.md  technical.md
hassio_ecoflow_cloud.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: config.json.template  ef_dp3_iobroker.proto  ef_dp3_iobroker_pb2.py  mqtt_capture_dp3_debug.py
serena/: README.md
tasks/: ISSUE_06_delta_pro3_prepare_data_decode_failure.md  active_context.md  tasks_plan.md
(+110 files in other folders)
